added the ability to edit and save edits for individual todos in the application

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -8,10 +8,12 @@
       <input type="text" ng-model='newTodo'>
       <button ng-click='createTodo(newTodo)'>Add New Todo</button>
     <ul>
-      <li ng-repeat='todo in todos track by $index'>{{ todo }} {{ $index }}
-        <input type='text' ng-show='isEditing' ng-model='todo'>
-        {{ todo.desc }}
+      <li ng-repeat='todo in todos track by $index'>
+        <input type='text' ng-show='isBeingEdited' ng-model='todo.desc'>
+        <span ng-hide='todo.isBeingEdited'>{{ todo.desc }}</span>
       <button ng-click='deleteTodo($index)'>&times;</button>
+      <button ng-click='editTodo(todo)' ng-hide='todo.isBeingEdited'>Edit</button>
+      <button ng-click='saveTodo($index, todo)' ng-show='todo.isBeingEdited'>Save</button>
       </li>
     </ul>
     </div>
